[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
methods = { path = "../methods" }
risc0-zkvm = { version = "0.19.1" }
env_logger = "0.10"
serde = "1.0"
forust-ml = "0.4.2"
rmp-serde = "1.1.2"
serde_json = "1.0.108"

[features]
cuda = ["risc0-zkvm/cuda"]
default = []
metal = ["risc0-zkvm/metal"]