[package]
name = "method"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
risc0-zkvm = { version = "0.19.1", default-features = false, features = [
    'std',
] }
env_logger = "0.10"
serde = "1.0"
forust-ml = "0.4.2"
rmp-serde = "1.1.2"
serde_json = "1.0.108"


[features]
cuda = ["risc0-zkvm/cuda"]
default = []
metal = ["risc0-zkvm/metal"]
